<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Automation</string>
    <string name="action_settings">Settings</string>
    <string name="current_status">Current Status :</string>
	<string name="button_on">On</string>
    <string name="button_off">Off</string>
	<string name="button_blink">Blink</string> 
	<string name="button_refresh">Refresh</string>   
	<string name="button_click">Click Picture</string>
	<string name="button_show_pic">Show Picture</string>
</resources>
